--- a/index.html
+++ b/index.html
@@ -9,32 +9,15 @@
   <script>
     'use strict';
 
-    const generateCerealKey = function () {
-      const chars = 'abcdefghijkmnpqrstuvwxyzABCDEFGHJKLMNPQRSTUVWXYZ23456789';
-      let key = 'VMK-';
-      for (let i = 0; i < 9; i++) {
-        if (i == 4) {
-          key += '-';
-          continue;
-        }
-        key += chars[~~(Math.random() * chars.length)];
-      }
-      return key;
-    }
-
     const myFunction = function () {
-      let textarea = document.getElementById('textarea');
-      textarea.select();
-      console.log(generateCerealKey());
-      for (let i = 0; i < 100; i++) {
-        for (let j = 0; j < 100; j++) {
-          textarea.innerHTML += generateCerealKey() + '\n';
-        }
-      console.log(`${i + 1}%`);
-      }
-      textarea.select();
-      textarea.setSelectionRange(0, 999999);
-      document.execCommand('copy');
+      const textarea = document.getElementById('textarea');
+      const myWorker = new Worker('worker.js');
+      myWorker.onmessage = msg => {
+        textarea.innerHTML = msg.data.join('\n');
+        textarea.select();
+        textarea.setSelectionRange(0, 99999);
+        document.execCommand('copy');
+      };
     }
   </script>
 </body>
