--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <header>
-  <title></title>
+  <title>VMK-XXXX-XXXX ID Code Generator</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
 </header>
 
